# jcode-django

./: README.md  pyproject.toml
src/jcode_django/: __init__.py  plugin.py
